# yl-test-api

./: .gitignore  pyproject.toml  pytest.ini  readme.md  requirements.txt  run.py
.github/workflows/: ginger.yml
cases/: __init__.py  conftest.py
cases/test_login/: conftest.py
common/: __init__.py  base_api.py  base_assert.py  base_data.py  base_device.py  base_extract.py  base_login.py
common/demo/: __init__.py  demo_conf_read.py  demo_dict.py  demo_enum.py  demo_hook.py  demo_init.py  demo_json_list.py  demo_list.py  demo_list_extend.py  demo_multi_dict.py  demo_obj_str.py  demo_old_new.py  demo_parametrize.py  demo_str.py  demo_time.py  demo_with_log.py  demo_yaml.py  pytest.ini
common/utils/: __init__.py  do_conf.py  do_excel.py  do_json.py  do_log.py  do_mongo.py  do_mysql.py  do_parametrize.py  do_path.py  do_slow_api.py  do_time.py  do_try.py
static/: __init__.py
static/allure_result/: 0ffec069-c10f-4f47-a249-3e798cea6321-container.json  38beabc8-c4aa-43db-b8b2-d3696121379e-container.json  5e89e21f-0dec-4dbc-b21e-01d31c8aa884-container.json  9679bb2d-c24f-481d-9fcc-8354d19ba244-container.json  a22001bc-07d6-4b06-ac61-adce9daf7cf0-container.json  aae85f6f-d307-4639-ada1-209b21b127df-result.json  c8da6d76-ea83-4d2e-b709-1cc3706d2785-result.json  c8f19fd9-fd61-440d-940a-fe93d52d4955-result.json  cd2c6e9e-0fb4-4a8e-afef-b8d235b38933-result.json  de7f1026-13af-4bc0-b193-1d0be6627931-container.json  ec99b88c-be20-4123-9154-de81da043496-container.json  f9d34ad4-7e3a-4b0c-996f-7c81f3acbf52-container.json
static/conf/: db.yml  (+12 more)
test_cases/: conftest.py
(+42 files in other folders)
