[tool.pytest.ini_options]
markers = [
    "demo : marks tests as demo",
    "smoke: marks tests as smoke",
    "test : marks tests as test"
]
addopts = [
    "-vs",
    "--show-capture=stderr"
]
python_files = "test_*"
python_classes = "Test*"
python_functions = "test_*"


[tool.poetry]
name = "yl-test-api"
version = "1.0.1"
description = "yl_test_api_pytest"
authors = ["姜通 <gingerqgyy@otlook.com>"]
license = "BSD"
readme = "README.md"
packages = [
    # 如果项目新增了目录, 或者根目录新增了文件, 请按照如下格式添加到该位置
    # 参考连接: https://python-poetry.org/docs/pyproject/#packages
    { include = "cases" },
    { include = "common" },
    { include = "static" },
    { include = "readme.md" },
    { include = "pyproject.toml" },
    { include = "run.py" }
]


[tool.poetry.dependencies]
python = "^3.12"
allure-python-commons = "2.9.45"
colorlog = "6.7.0"
jsonpath = "0.82.2"
openpyxl = "3.0.10"
poetry = "1.7.1"
pymongo = "4.6.1"
pymysql = "1.1.0"
pytest = "7.4.3"
PyYAML = "6.0.1"
requests = "2.31.0"
xlrd = "2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
